<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="my_title">My Nanodegree Apps!</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn1Caption">SPOTIFY STREAMER</string>
    <string name="btn2Caption">SCORES APP</string>
    <string name="btn3Caption">LIBRARY APP</string>
    <string name="btn4Caption">BUILT IT BIGGER</string>
    <string name="btn5Caption">XYZ READER</string>
    <string name="btn6Caption">CAPSTONE: MY OWN APP</string>
    <string name="btn1Desc">Spotify Streamer</string>
    <string name="btn2Desc">Scores</string>
    <string name="btn3Desc">Library</string>
    <string name="btn4Desc">Build it Bigger</string>
    <string name="btn5Desc">XYZ Reader</string>
    <string name="btn6Desc">Capstone</string>
</resources>
