<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:theme="@style/AppTheme"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:textAlignment="center"
    android:background="@android:color/background_light"
    android:theme="@style/AppTheme"
    style="@style/AppTheme"
    android:id="@+id/mainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/my_title"
        android:id="@+id/textView"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="false"
        android:gravity="center|center_horizontal"
        android:clickable="true"
        style="@style/MyDefaultTitle"
        android:textIsSelectable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn1Caption"
        android:id="@+id/btn1"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center|center_horizontal"
        style="@style/MyDefaultButton"
        android:shadowColor="#757575"
        android:singleLine="true"
        android:enabled="true"
        android:focusable="true"
        android:clickable="false"
        android:contentDescription="@string/btn1Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn2Caption"
        android:id="@+id/btn2"
        android:gravity="center|center_horizontal"
        android:layout_below="@+id/btn1"
        android:layout_centerHorizontal="true"
        style="@style/MyDefaultButton"
        android:contentDescription="@string/btn2Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn3Caption"
        android:id="@+id/btn3"
        android:gravity="center|center_horizontal"
        android:layout_below="@+id/btn2"
        android:layout_centerHorizontal="true"
        style="@style/MyDefaultButton"
        android:contentDescription="@string/btn3Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn4Caption"
        android:id="@+id/btn4"
        android:gravity="center|center_horizontal"
        android:layout_below="@+id/btn3"
        android:layout_centerHorizontal="true"
        style="@style/MyDefaultButton"
        android:contentDescription="@string/btn4Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn5Caption"
        android:id="@+id/btn5"
        android:gravity="center|center_horizontal"
        android:layout_below="@+id/btn4"
        android:layout_centerHorizontal="true"
        style="@style/MyDefaultButton"
        android:contentDescription="@string/btn5Desc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn6Caption"
        android:id="@+id/btn6"
        android:gravity="center|center_horizontal"
        android:layout_below="@+id/btn5"
        android:layout_centerHorizontal="true"
        style="@style/MyCapstonButton"
        android:contentDescription="@string/btn6Desc" />

</RelativeLayout>
</ScrollView>